--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box
+  box-sizing: border-box
 }
 
 html {
   -ms-text-size-adjust: 100%;
--webkit-text-size-adjust: 100%
+  -webkit-text-size-adjust: 100%
 }
 
 body {
@@ -43,6 +43,35 @@ h2 {
   background-size: cover;
 }
 
+#loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+#loading p {
+  margin: 0 0 1rem;
+  line-height: 3rem;
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #333333;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  padding: 3rem;
+}
+
 #app {
   width: 100vw;
   height: 100vh;
@@ -50,17 +79,18 @@ h2 {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 #pizza-counter {
   color: white;
   font-size: 30px;
   text-align: center;
+  padding: 3rem;
 }
 
 #pizza-counter p {
