--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -1,17 +1,15 @@
 :root {
-  --primary-h: 0;
-  --primary-s: 100%;
-  --primary-l: 41%;
+  --primary: 208, 0, 0;
 }
 
 * {
   box-sizing: border-box;
 }
 
-
 body {
   margin: 0;
-  font: 1em/1.6 system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue, Fira Sans, sans-serif;
+  font: 1em/1.6 system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue, Fira Sans, sans-serif;
   font-weight: 400;
   font-style: normal;
   text-rendering: optimizeLegibility;
@@ -49,7 +47,7 @@ body {
   font-size: 0.875rem;
   margin: 0;
   line-height: 1.333;
-  background-color: hsl(var(--primary-h), var(--primary-s), var(--primary-l), var(--background-opacity));
+  background-color: rgba(var(--primary), var(--background-opacity));
   backdrop-filter: blur(8px);
   transition: background 333ms ease-in-out;
 }
@@ -75,14 +73,14 @@ body {
 }
 
 .sr-only {
-	border: 0 !important;
-	clip: rect(1px, 1px, 1px, 1px) !important;
+  border: 0 !important;
+  clip: rect(1px, 1px, 1px, 1px) !important;
   clip-path: inset(50%);
-	height: 1px !important;
-	margin: -1px !important;
-	overflow: hidden !important;
-	padding: 0 !important;
-	position: absolute !important;
-	width: 1px !important;
-	white-space: nowrap !important;
+  height: 1px !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  padding: 0 !important;
+  position: absolute !important;
+  width: 1px !important;
+  white-space: nowrap !important;
 }
