--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -7,6 +7,9 @@
 }
 
 body {
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
   margin: 0;
   font: 1em/1.6 system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue, Fira Sans, sans-serif;
@@ -27,60 +30,143 @@ body {
   object-fit: cover;
 }
 
-.pizza-counter {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-}
+.button {
+  --background-opacity: 0.7;
 
-.credit {
-  --background-opacity: 0.5;
-
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100vw;
-  text-align: center;
-  z-index: 75;
-  padding: 0.666em 1.333em 0.6em;
-  font-size: 0.875rem;
-  margin: 0;
-  line-height: 1.333;
+  display: flex;
+  align-items: center;
+  height: 2.25em;
+  padding: 0.4em 2em 0.333em;
+  border: 3px solid rgb(var(--primary));
+  border-radius: 5rem;
   background-color: rgba(var(--primary), var(--background-opacity));
-  backdrop-filter: blur(8px);
+  backdrop-filter: blur(12px);
+  color: #fff;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: bold;
+  line-height: 1.333;
+  overflow: hidden;
+  text-decoration: none;
   transition: background 333ms ease-in-out;
 }
 
-.credit:hover,
-.credit:focus-within {
+.button:hover,
+.button:focus {
   --background-opacity: 1;
 }
 
-.credit a {
+.button__icon {
+  width: 1.5em;
+  height: 1.5em;
+  margin-left: 0.666em;
+}
+
+.tray {
+  width: 100vw;
+  height: 100vh;
+}
+
+.tray__inner {
+  box-sizing: border-box;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  max-width: 22rem;
+  padding: 0 2em;
+  transform: translate(-50%, calc(100% - 3.25em));
+  transition: transform 333ms ease-in-out;
+}
+
+.tray:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: block;
+  background-color: rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(16px);
+  content: '';
+  opacity: 0;
+  transition: opacity 333ms ease-in-out;
+}
+
+.tray.expanded .tray__inner {
+  transform: translate(-50%, 0);
+}
+
+.tray.expanded:before {
+  opacity: 1;
+}
+
+.toggle {
+  box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.25);
+}
+
+.tray .button__icon {
+  transition: transform 333ms ease-in-out;
+  transition-delay: 333ms;
+}
+
+.tray.expanded .button__icon {
+  transform: scaleY(-1);
+}
+
+.tray__content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 1em 1em 2em;
+  /* border-radius: 12px 12px 0 0; */
+  /* background-color: rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(10px); */
+  max-height: 80vh;
+  overflow-x: auto;
+}
+
+.tray__content a {
+  display: block;
+  padding: 0.3em 0.5em;
+  color: #fff;
   font-weight: bold;
-  text-decoration: underline;
+  text-align: center;
+  text-decoration: none;
+  text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.25);
   text-underline-position: under;
-  color: white;
-  cursor: pointer;
+  transform: translateY(1em) scale(1.5);
+  opacity: 0;
   transition: all 200ms ease-in-out;
+  transition-delay: 333ms;
 }
 
-.credit a:hover,
-.credit a:focus {
-  background-color: white;
-  color: black;
+.tray__content a:active,
+.tray__content a:focus,
+.tray__content a:hover {
+  text-decoration: underline;
 }
 
-.sr-only {
-  border: 0 !important;
-  clip: rect(1px, 1px, 1px, 1px) !important;
-  clip-path: inset(50%);
-  height: 1px !important;
-  margin: -1px !important;
-  overflow: hidden !important;
-  padding: 0 !important;
-  position: absolute !important;
-  width: 1px !important;
-  white-space: nowrap !important;
+.tray.expanded .tray__content a {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.tray.expanded .tray__content a:nth-child(1) {
+  transition-delay: 0ms;
+}
+
+.tray.expanded .tray__content a:nth-child(2) {
+  transition-delay: 150ms;
+}
+
+.tray.expanded .tray__content a:nth-child(3) {
+  transition-delay: 300ms;
+}
+
+.tray.expanded .tray__content a:nth-child(4) {
+  transition-delay: 450ms;
 }
