--- a/src/_assets/app.css
+++ b/src/_assets/app.css
@@ -46,7 +46,6 @@ body {
   font-size: 1rem;
   font-weight: bold;
   line-height: 1.333;
-  overflow: hidden;
   text-decoration: none;
   transition: background 333ms ease-in-out;
 }
@@ -59,6 +58,12 @@ body {
 .button__icon {
   width: 1.5em;
   height: 1.5em;
+  margin-left: 0.666em;
+}
+
+.button__eth {
+  width: 3.2em;
+  height: 3.2em;
   margin-left: 0.666em;
 }
 
@@ -146,7 +151,8 @@ body {
 
 .tray__content a:active,
 .tray__content a:focus,
-.tray__content a:hover {
+.tray__content a:hover,
+.tray__content a.active {
   text-decoration: underline;
 }
 
@@ -156,17 +162,17 @@ body {
 }
 
 .tray.expanded .tray__content a:nth-child(1) {
-  transition-delay: 0ms;
+  transition-delay: 250ms;
 }
 
 .tray.expanded .tray__content a:nth-child(2) {
-  transition-delay: 150ms;
+  transition-delay: 400ms;
 }
 
 .tray.expanded .tray__content a:nth-child(3) {
-  transition-delay: 300ms;
+  transition-delay: 550ms;
 }
 
 .tray.expanded .tray__content a:nth-child(4) {
-  transition-delay: 450ms;
+  transition-delay: 700ms;
 }
