--- a/src/_assets/app.css
+++ b/src/_assets/app.css
@@ -27,7 +27,25 @@ body {
   left: 0;
   width: 100vw;
   height: 100vh;
-  object-fit: cover;
+  z-index: -1;
+  pointer-events: none;
+  overflow: hidden;
+}
+
+.video iframe {
+  width: 100vh;
+  height: 1000vw;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@media (min-aspect-ratio: 1/1) {
+  .video iframe {
+    width: 100vw;
+    height: 100vw;
+  }
 }
 
 .button {
@@ -61,7 +79,16 @@ body {
   margin-left: 0.666em;
 }
 
-.button__eth {
+.button--nft {
+  position: absolute;
+  z-index: 5;
+  top: 2rem;
+  left: 50%;
+  transform: translateX(-50%);
+  padding-right: 16px;
+}
+
+.button--nft svg {
   width: 3.2em;
   height: 3.2em;
   margin-left: 0.666em;
@@ -127,9 +154,6 @@ body {
   flex-direction: column;
   width: 100%;
   padding: 1em 1em 2em;
-  /* border-radius: 12px 12px 0 0; */
-  /* background-color: rgba(0, 0, 0, 0.25);
-  backdrop-filter: blur(10px); */
   max-height: 80vh;
   overflow-x: auto;
 }
@@ -138,7 +162,7 @@ body {
   display: block;
   padding: 0.3em 0.5em;
   color: #fff;
-  font-weight: bold;
+  font-weight: bolder;
   text-align: center;
   text-decoration: none;
   text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.25);
