--- a/src/_includes/tray.njk
+++ b/src/_includes/tray.njk
@@ -1,7 +1,7 @@
 <div class="tray" data-tray>
   <div class="tray__inner">
     <button class="toggle button" data-toggle-tray>
-      Pizza Style
+      Pizzas
       <svg
         xmlns="http://www.w3.org/2000/svg"
         aria-hidden="true"
@@ -21,7 +21,7 @@
     <div class="tray__content">
       {% for pizza in pizzas %}
         <a href="/pizza/{{ pizza.slug }}/" class="{{ 'active' if page.url === '/pizza/' + pizza.slug + '/' }}">
-          {{ pizza.name }}
+          {{ pizza.title }}
         </a>
       {% endfor %}
     </div>
