--- a/src/_includes/video.njk
+++ b/src/_includes/video.njk
@@ -1,11 +1,10 @@
-<video
-  class="video"
-  poster="/static/pizza/{{ video|default('default') }}/cover.png"
-  autoplay
-  muted
-  loop
-  playsinline
->
-  <source src="/static/pizza/{{ video|default('default') }}/pizza.webp" type="video/webp" />
-  <source src="/static/pizza/{{ video|default('default') }}/pizza.mp4" type="video/mp4" />
-</video>
+{% if video_vimeo_id %}
+  <div class="video">
+    <iframe
+      src="https://player.vimeo.com/video/{{ video_vimeo_id }}?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;background=1"
+      frameborder="0"
+      allow="autoplay; fullscreen"
+      title="{{ video_title|default('Perpetual Pizza') }}"
+    ></iframe>
+  </div>
+{% endif %}
