--- a/src/index.njk
+++ b/src/index.njk
@@ -3,4 +3,6 @@ layout: base.njk
 title: The Never Ending Digital Pizza
 ---
 
+{% set video_title = pizzas[0].title %}
+{% set video_vimeo_id = pizzas[0].video %}
 {% include 'video.njk' %}
