--- a/src/_assets/app.css
+++ b/src/_assets/app.css
@@ -30,22 +30,7 @@ body {
   z-index: -1;
   pointer-events: none;
   overflow: hidden;
-}
-
-.video iframe {
-  width: 100vh;
-  height: 1000vw;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-@media (min-aspect-ratio: 1/1) {
-  .video iframe {
-    width: 100vw;
-    height: 100vw;
-  }
+  object-fit: cover;
 }
 
 .button {
@@ -53,12 +38,14 @@ body {
 
   display: flex;
   align-items: center;
+  width: max-content;
   height: 2.25em;
   padding: 0.4em 2em 0.333em;
   border: 3px solid rgb(var(--primary));
   border-radius: 5rem;
   background-color: rgba(var(--primary), var(--background-opacity));
   backdrop-filter: blur(12px);
+  box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.25);
   color: #fff;
   cursor: pointer;
   font-size: 1rem;
@@ -92,6 +79,7 @@ body {
   width: 3.2em;
   height: 3.2em;
   margin-left: 0.666em;
+  filter: drop-shadow(3px 5px 2px rgb(0, 0, 0, 0.25));
 }
 
 .tray {
@@ -134,10 +122,6 @@ body {
 
 .tray.expanded:before {
   opacity: 1;
-}
-
-.toggle {
-  box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.25);
 }
 
 .tray .button__icon {
