Added NFT link to homepage.

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -14,7 +14,7 @@
   <body>
     <main id="content">
       {{ content|safe }}
-      {% include 'tray.njk' %}
+      {# {% include 'tray.njk' %} #}
     </main>
   </body>
   <script src="/static/app.bundled.js"></script>
