--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -7,10 +7,26 @@
 <meta name="robots" content="index,follow" />
 <meta name="googlebot" content="index,follow" />
 <meta name="google" content="nositelinkssearchbox" />
-<meta name="google" content="notranslate" />
 <meta name="format-detection" content="telephone=no" />
 <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
 <title>{% if title %}{{ title }} | {% endif %}{{ site.title }}</title>
 <link rel="author" href="humans.txt" />
 
-<link rel="icon" type="image/svg+xml" href="/static/favicon.svg" />
+<link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png" />
+<link rel="manifest" href="/static/site.webmanifest" />
+<link rel="shortcut icon" href="/static/favicon.ico" />
+<meta name="theme-color" content="#d00000" />
+
+<meta property="og:image:width" content="1080" />
+<meta property="og:image:height" content="1080" />
+<meta property="og:title" content="{% if title %}{{ title }} | {% endif %}{{ site.title }}" />
+<meta property="og:description" content="{% if description %}{{ description }}{% else %}{{ site.description }}{% endif %}" />
+<meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+
+{% if pizza.slug %}
+<meta property="og:image" content="/static/{{ pizza.slug }}/cover.jpg" />
+{% else %}
+<meta property="og:image" content="/static/ppz01/cover.jpg" />
+{% endif %}
