--- a/src/_includes/tray.njk
+++ b/src/_includes/tray.njk
@@ -20,7 +20,7 @@
     </button>
     <div class="tray__content">
       {% for pizza in pizzas %}
-        <a href="/pizza/{{ pizza.slug }}/" class="{{ 'active' if page.url === '/pizza/' + pizza.slug + '/' }}">
+        <a href="/{{ pizza.slug }}/" class="{{ 'active' if page.url === '/' + pizza.slug + '/' }}">
           {{ pizza.title }}
         </a>
       {% endfor %}
