--- a/src/_includes/video.njk
+++ b/src/_includes/video.njk
@@ -1,9 +1,9 @@
 <video
-  class="video"
-  poster="/static/{{ video|default('ppz01') }}/cover.jpg"
   autoplay
-  muted loop
-  playsinline
->
-  <source src="/static/{{ video|default('ppz01') }}/pizza.mp4" type="video/mp4" />
-</video>
+  class="video"
+  data-video-id="{{ videoId }}"
+  id="cover-video"
+  loop
+  muted
+  poster="/static/{{ videoSlug|default('ppz01') }}/cover.jpg"
+></video>
