Disabled UI elements.

--- a/src/pizza-pages.njk
+++ b/src/pizza-pages.njk
@@ -10,7 +10,7 @@ permalink: "{{ pizza.slug }}/"
 {% set video = pizza.slug %}
 {% include 'video.njk' %}
 
-<a href="{{ pizza.link }}" rel="nofollow noopener" class="button button--nft" target="_blank">
+{# <a href="{{ pizza.link }}" rel="nofollow noopener" class="button button--nft" target="_blank">
   View the NFT
   <svg
     xmlns="http://www.w3.org/2000/svg"
@@ -21,6 +21,6 @@ permalink: "{{ pizza.slug }}/"
     <path d="M140.281 333.582L0 266.848 140.281 512l140.285-245.152zm-66.418 1.738l66.418 31.598 66.422-31.598-66.422 116.07zm0 0"/>
     <path d="M275.852 235.46L140.282 0 4.714 235.46l135.566 64.216zM140.282 60.329l77.323 134.297L140.281 158l-77.32 36.625zm0 130.98l79.23 37.532-79.23 37.527-79.227-37.527zm0 0"/>
   </svg>
-</a>
+</a> #}
 
-{% include 'tray.njk' %}
+{# {% include 'tray.njk' %} #}
