Removed UI elements from homepage.

--- a/src/index.njk
+++ b/src/index.njk
@@ -6,4 +6,4 @@ title: The Never Ending Digital Pizza
 {% set video = pizzas[0].slug %}
 {% include 'video.njk' %}
 
-{% include 'tray.njk' %}
+{# {% include 'tray.njk' %} #}
