Added tracking script.

--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -30,3 +30,5 @@
 {% else %}
 <meta property="og:image" content="/static/ppz01/cover.jpg" />
 {% endif %}
+
+<script defer data-domain="perpetual.pizza" src="https://stats.perpetual.pizza/js/index.js"></script>
