--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ const defaultCover = '/pizza/01/cover.jpg';
 const defaultTitle = 'Perpetual Pizza | The never ending digital pizza';
 const defaultDescription =
   'Watch the never ending digital pizza spin hypnotize you into ordering a pizza.';
-const siteUrl = import.meta.env.VERCEL_URL || Astro.url.href;
+const siteUrl = 'https://perpetual.pizza';
 const currentPath = Astro.url.pathname;
 
 const {
@@ -23,7 +23,7 @@ const {
 } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -138,8 +138,18 @@ const {
     width: 100vw;
     overflow: hidden;
     margin: 0;
-    font: 1em/1.6 system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-      Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue, Fira Sans,
+    font:
+      1em/1.6 system-ui,
+      -apple-system,
+      BlinkMacSystemFont,
+      Segoe UI,
+      Roboto,
+      Oxygen,
+      Ubuntu,
+      Cantarell,
+      Droid Sans,
+      Helvetica Neue,
+      Fira Sans,
       sans-serif;
     font-weight: 400;
     font-style: normal;
